Fix footer spacing to match header

--- a/styles.css
+++ b/styles.css
@@ -197,6 +197,9 @@ li {
   color: var(--text-color);
   background-color: var(--bg-color);
 }
+.project-btns a:hover {
+  border: 1.5px solid rgba(11, 35, 44, 0.5);
+}
 .project-source-btns {
   display: flex;
   gap: 10px;
@@ -322,7 +325,7 @@ li {
 }
 .footer {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   gap: 10px;
   border-top: 0.5px solid rgba(11, 35, 44, 0.2);
